# sepsis-timeline-ml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: summary_table_dev5000.csv
data/: README.md
notebooks/: 00_setup_and_sanity.ipynb  01_eda.ipynb  02_preprocessing.ipynb  03_model_lstm.ipynb  04_model_gru.ipynb  05_model_transformer.ipynb  06_evaluation.ipynb
outputs/logs/: metrics_dev5000_table.tex
outputs/tables/: model_comparison_dev5000.csv  model_comparison_dev5000.json
src/utils/: sanity.py
